{
    "name": "Controls",
    "maps": [
        {
            "name": "New action map",
            "id": "e185c1cc-7899-4427-b0f7-5b295ccbc085",
            "actions": [
                {
                    "name": "LeftFlipper",
                    "type": "Button",
                    "id": "46760d0c-6d53-4058-86ba-7056ffda8726",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightFlipper",
                    "type": "Button",
                    "id": "d19ad298-f87c-4450-8976-6773a0acdeda",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftNudge",
                    "type": "Button",
                    "id": "247cf153-2b13-4394-b746-cc49f25971e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightNudge",
                    "type": "Button",
                    "id": "a362d8ba-e6fb-4e9f-88df-6eb77a2c5cf2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpNudge",
                    "type": "Button",
                    "id": "940bd0e5-6851-42cf-b4c4-8b0b25d6b127",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AnyKey",
                    "type": "Button",
                    "id": "a590c367-71d0-4c58-87bc-34ca3aa837d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MuteMusic",
                    "type": "Button",
                    "id": "f45d64c2-90ba-4947-93af-6a573d695761",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FullscreenToggle",
                    "type": "Button",
                    "id": "144c4231-6290-4f04-b711-be5e84d27340",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitFullscreen",
                    "type": "Button",
                    "id": "ed1954d2-cced-4b3f-9ec3-0a6bbd04df1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dfc99837-d614-4922-9694-b4d1743be5cb",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftFlipper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64b76195-30e2-4ad4-9910-9773d267d2d3",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftFlipper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3237d69b-1332-4ac8-a65d-f0fac6be77dc",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightFlipper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8068785b-aac1-474b-95a6-8a00d61ced84",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightFlipper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3a408f0-42e6-4794-8ee8-e5d0fc806795",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftNudge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0586f01-82e8-468e-ba05-c74699f23434",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftNudge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1de50ec-64fe-4298-8b98-d8c72052d44e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightNudge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55cb9938-3e6d-45a7-8192-55cb30ea4872",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightNudge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d032cf17-21b4-4cb1-b217-776d82651757",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpNudge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b6030a3-f0cb-4960-a66f-ce6cf38e32d8",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpNudge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d3a9a06-18d4-4551-bd36-ace4e254e6b6",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2f19f0c-dcac-4bd8-bdfe-74bf06429e8e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "216b433a-969b-4339-9838-7f24986bebe0",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MuteMusic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6d20ce6-55db-4f25-acb2-94f2a991c1b4",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MuteMusic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7df80f5-22f7-4f10-a828-0905c2bd9501",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FullscreenToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ae5d72a-4af5-4954-8506-6352dec3b94d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitFullscreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}